fix for overflowing width

--- a/wp-content/themes/optimus-mini/scss/style.scss
+++ b/wp-content/themes/optimus-mini/scss/style.scss
@@ -2958,14 +2958,14 @@ html, body {
         margin: 0 auto;
         @include calcMaxWidth($desktopLarge);
 
-        .products-slider {
-          .cards {
-            margin: -0.875em 0;
-            .card {
-              width: calc((100% / 5) - 10px);
-            }
-          }
-        }
+        //.products-slider {
+        //  .cards {
+        //    margin: -0.875em 0;
+        //    .card {
+        //      width: calc((100% / 5) - 10px);
+        //    }
+        //  }
+        //}
 
       }
     }
